# AI-Music-Mentor

./: .env.example  .gitignore  README.md  admin.py  app.py  config.py  docker-compose.yml  main.py  pyproject.toml
 notebooks/: Audio_Arrangment_Classification_Finetuning - 4 classes.ipynb
.github/: pull_request_template.md
.github/workflows/: ci.yml
admin_tabs/: __init__.py  add_new.py  browse_edit.py
data/batch_import/: README.md
data/uploads/session_20250911_175025/: session_info_.json
db/: db.py  db_test.py  models.py  operations.py
scripts/: batch_import.py
services/: audio_rag.py
src/: audio_features.py
tests/: test_audio_features.py
uploads/session_20250911_175025/: input--2025-07-21 Nik Fury Remix--20250911_175025.json  reference--M-High - The Saw That Broke The Camels Back (KiNK Dub Remix)--20250911_175029.json  session_info.json
